--- a/IDBsocialdata/index.rmd
+++ b/IDBsocialdata/index.rmd
@@ -1,5 +1,5 @@
 ---
-title: "OSPO - a benchmark for countries: Methodology Handbook"
+title: "Data and Indicators for Latin America and the Caribbean: Methodology Handbook"
 github-repo: https://github.com/EL-BID/scl-doc
 output: html_document
 link-citations: yes
@@ -38,48 +38,33 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 # Overview {.unnumbered}
-# Overview {#overview}
+
+```{r IDB, out.width='45%', fig.align='left', echo=FALSE, include=identical(knitr:::pandoc_to(), 'html'), fig.link='https://www.iadb.org/en/sharing-knowledge/data/social-data', fig.show='hold',  out.extra='style="float:right; padding:0px"'}
+knitr::include_graphics('figure/IDB.png')
+```
 
 In the digital age, open-source software transforms how governments operate, innovate, and serve their citizens. Adopting open-source practices can increase transparency, collaboration, and efficiency, aligning with the broader digital transformation goals. However, to harness these benefits effectively, governments must have a structured approach to managing their open-source activities. This is where an Open Source Program Office (OSPO) comes into play.
 
 This guide provides a comprehensive roadmap for local, state, and federal governments to establish and manage their own OSPOs. By following this guide, government entities can create a sustainable framework to support open-source initiatives, ensuring they contribute to and benefit from the global open-source community.
 
-### Practical Benefits of an OSPO for Governments
+[**Data and Indicators for Latin America and the Caribbean (LAC)**](https://www.iadb.org/en/sharing-knowledge/data/social-data) is a digital platform that provides key data and indicators for regional research and development. It addresses fundamental issues such as poverty, health, inequality, employment, education, and migration and especially highlights the gender and diversity perspective.
 
-1. **Transparency and Trust**: Open-source software promotes transparency by allowing anyone to inspect, modify, and enhance the code. This openness builds trust among citizens, as they can see and understand the technologies their government uses.
+The purpose of this tool is to provide a unified source of harmonized, standardized, and comparable demographic, economic, and social data for the 26 countries of the LAC region. The goal is to invite diverse audiences to discover and study the situation in the region.
 
-2. **Cost Efficiency**: Utilizing open-source solutions can significantly reduce software licensing costs and dependence on proprietary vendors. This allows governments to allocate resources more effectively.
+This document outlines the methodology used to estimate and present data and indicators on the platform. Links to the methodology in English, Spanish, and Portuguese are available below:[^1]
 
-3. **Collaboration and Innovation**: Open-source encourages collaboration across government agencies, private sector partners, non-profits, and the academic community. This collective effort can drive innovation and lead to the development of more effective and inclusive public services.
+[^1]: This report is written with the `Markdown` [@markdown] and the `bookdown` [@bookdown] packages.
 
-4. **Skill Development and Capacity Building**: Implementing open-source projects provides government employees with opportunities to enhance their technical skills, fostering a culture of continuous learning and improvement.
+-   [**English**](#intro-eng)
 
-5. **Security and Flexibility**: Governments can more quickly identify and fix security vulnerabilities with access to the source code. Open-source software can be tailored to meet specific needs, offering greater flexibility than off-the-shelf solutions.
+-   [**Spanish**](#intro-esp)
 
-### Structure of This Guide
+-   [**Portuguese**](#intro-pt)
 
-This guide is divided into several key sections, each addressing a critical aspect of establishing and managing an OSPO:
+**To cite the platform, please use:** Inter-American Development Bank -IDB (2023). "Data and Indicators of Latin America and the Caribbean." Available in <https://www.iadb.org/en/sharing-knowledge/data/social-data>. Accessed 2023."
 
-1. **Scope of Work**: Outlines the general roles and responsibilities within an OSPO, including key positions such as the Program Manager, Community Manager, and Legal Advisor.
+## Limitation of responsibilities {.unnumbered}
 
-2. **Main Partners/Stakeholders**: Identifies potential partners and stakeholders, including other government agencies, development organizations, open-source communities, academia, non-profits, and the private sector.
+The IDB is not responsible, under any circumstance, for damage or compensation, moral or patrimonial; direct or indirect; accessory or special; or by way of consequence, foreseen or unforeseen, that could arise:
 
-3. **Skills for Terms of Reference**: Details the necessary skills and qualifications for key roles within the OSPO.
-
-4. **Planning and Strategy**: Provides guidance on setting goals, identifying stakeholders, creating a roadmap, and managing risks.
-
-5. **Legal and Policy Considerations**: Covers the legal aspects of open-source, including licensing, compliance, and policy development.
-
-6. **Technology and Infrastructure**: Discusses the technological requirements and tools needed to support an OSPO.
-
-7. **Implementation**: Offers a step-by-step guide to implementing open-source projects, including training, pilot programs, and scaling up.
-
-8. **Community and Collaboration**: Explores ways to build and nurture a community of contributors and collaborators.
-
-9. **Sustainability and Maintenance**: Suggests strategies for long-term maintenance and continuous improvement of open-source projects.
-
-10. **Resources**: Provides templates, checklists, sample policies, and further reading materials.
-
-11. **Appendices**: Includes a glossary of terms, frequently asked questions, and contact information for support.
-
-By following this guide, government entities can establish a robust framework to manage their open-source initiatives effectively, ensuring they can reap the benefits of open-source while contributing to the global community.
+I. Under any concept of intellectual property, negligence or detriment of another part theory; I ii. Following the use of the Digital Tool, including, but not limited to defects in the Digital Tool, or the loss or inaccuracy of data of any kind. The foregoing includes expenses or damages associated with communication failures and / or malfunctions of computers, linked to the use of the Digital Tool.
